changed images and urls the protfolio.

--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                                         <h4>JavaScript</h4>
                                     </div>
                                 </div>
-                                <a href="https://vmdecorado.offerforyo.com/" target="_blank" class="learn-more">Landing page VM Decorado <i class="fa-solid fa-arrow-right"></i></a>
+                                <a href="https://vmdecorado.offerforyo.com/" target="_blank" class="learn-more">Landing page VM Decorado </a>
                             </div>
                             <div class="col-lg-6 col-12">
                                 <img src="images/portfolio/vm-decorado.png" alt="portfolio">
@@ -349,10 +349,10 @@
                         <!-- projeto 02 inicio -->
                         <div class="bordered-box row g-4 justify-content-between align-items-center padding-32">
                             <div class="col-lg-6 col-12">
-                                <img src="images/portfolio/2.png" alt="portfolio">
+                                <img src="images/portfolio/moveei-landing-page.png" alt="portfolio">
                             </div>
                             <div class="col-lg-6 d-flex flex-column justify-content-start gap-16 col-12">
-                                <h2 class="heading-2"><span class="primary-text">02.</span> Moveei - Criador de orçamentos de alto conversão para loja de moveis planejados</h2>
+                                <h2 class="heading-2"><span class="primary-text">02.</span> Moveei - Uma aplicação para criar orçamentos profissionais que vendem mais, de alto conversão para loja de moveis planejados</h2>
                                 <p class="body-2">Essa aplicação oferecer uma solução completa para que lojas de móveis planejados possam criar, gerenciar e apresentar orçamentos de forma profissional e eficiente, facilitando a conversão de clientes potenciais e otimizando o processo de vendas.
                                 </p>
                                 <div class="d-flex flex-wrap  gap-8 col-lg-8">
@@ -376,9 +376,8 @@
                                     </div>
                                     
                                 </div>
-                                <a href="https://prismafive.com.br/farmafacil/" target="_blank" class="learn-more">Landing page Moveei <i class="fa-solid fa-arrow-right"></i></a>
-                                <a href="https://www.yellowling.com.br/" target="_blank" class="learn-more">Aplicativo Moveei na Play Store <i class="fa-solid fa-arrow-right"></i></a>
-                                <a href="https://www.yellowling.com.br/" target="_blank" class="learn-more">Pagina de apresentação do orçamento <i class="fa-solid fa-arrow-right"></i></a>
+                                <a href="https://moveei.offerforyo.com/" target="_blank" class="learn-more">Landing page Moveei </a>
+                                <a href="https://moveei.offerforyo.com/marcenaria/moveei%20marcenaria?orcamento=5050" target="_blank" class="learn-more">Pagina de apresentação do orçamento </a>
                             </div>
                         </div>
                         <!-- projeto 02 fim -->
