--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                                 <p class="body-1 grey-text col-lg-6 col-12 "><span class="primary-text">anos</span> de experiencia</p>
                             </div>
                             <div class="col-lg-5 col-md-6 col-12 d-flex flex-lg-row flex-column justify-content-lg-start justify-content-center text-lg-start text-center  align-items-center gap-16 ">
-                                <h1 class="heading-1">02</h1>
+                                <h1 class="heading-1">01</h1>
                                 <p class="body-1 grey-text col-lg-6 col-12 "><span class="primary-text">projetos </span> completos</p>
                             </div>
                         </div>
@@ -319,48 +319,18 @@
                         <h1 class="heading-1">meu último <span class="primary-text">trabalho</span></h1>
                     </div>
                     <div class="d-flex flex-column gap-4">
-                        <!-- projeto 01 inicio -->
-                        <div class="bordered-box row g-4 justify-content-between align-items-center padding-32">
-                            <div class="col-lg-6 d-flex flex-column justify-content-start gap-16 col-12">
-                                <h2 class="heading-2"><span class="primary-text">01.</span> Landing Page VM Decorado</h2>
-                                <p class="body-2"> Landing page para a empresa VM Decorado, empresa de moveis planejados, esse projeto tinha como objetivo apresentar a empresa e seus diferenciais de forma simples e clara.</p>
-                                <div class="d-flex flex-wrap  gap-8 col-lg-8">
-                                    <div class="padding-8 box-tag w-fit">
-                                        <h4>web developement</h4>
-                                    </div>
-                                    <div class="padding-8 box-tag w-fit">
-                                        <h4>HTML</h4>
-                                    </div>
-                                    <div class="padding-8 box-tag w-fit">
-                                        <h4>CSS</h4>
-                                    </div>
-                                    <div class="padding-8 box-tag w-fit">
-                                        <h4>JavaScript</h4>
-                                    </div>
-                                </div>
-                                <a href="https://vmdecorado.offerforyo.com/" target="_blank" class="learn-more">Landing page VM Decorado </a>
-                            </div>
-                            <div class="col-lg-6 col-12">
-                                <img src="images/portfolio/vm-decorado.png" alt="portfolio">
-                            </div>
-                        </div>
-                        <!-- projeto 01 fim -->
 
-                        <!-- projeto 02 inicio -->
+                        <!-- projeto 01 inicio -->
                         <div class="bordered-box row g-4 justify-content-between align-items-center padding-32">
                             <div class="col-lg-6 col-12">
                                 <img src="images/portfolio/moveei-landing-page.png" alt="portfolio">
                             </div>
                             <div class="col-lg-6 d-flex flex-column justify-content-start gap-16 col-12">
-                                <h2 class="heading-2"><span class="primary-text">02.</span> Moveei - Uma aplicação para criar orçamentos profissionais que vendem mais, de alto conversão para loja de moveis planejados</h2>
-                                <p class="body-2">Essa aplicação oferecer uma solução completa para que lojas de móveis planejados possam criar, gerenciar e apresentar orçamentos de forma profissional e eficiente, facilitando a conversão de clientes potenciais e otimizando o processo de vendas.
-                                </p>
+                                <h2 class="heading-2"><span class="primary-text">02.</span> Moveei - É um Micro SaaS de gestão simplificada voltado para marcenarias de móveis planejados</h2>
+                                <p class="body-2">É uma aplicação web que transforma a marcenaria em um negócio lucrativo e organizado. Cria orçamentos profissionais de alta conversão, controle dos custos para precificação, controle dos projetos e indicadores do negocio — tudo em um único sistema simples e inteligente.
                                 <div class="d-flex flex-wrap  gap-8 col-lg-8">
                                    <div class="padding-8 box-tag w-fit">
-                                        <h4>Flutter</h4>
-                                    </div>
-                                    <div class="padding-8 box-tag w-fit">
-                                        <h4>React</h4>
+                                        <h4>Nextjs</h4>
                                     </div>
                                     <div class="padding-8 box-tag w-fit">
                                         <h4>Tailwind CSS</h4>
@@ -369,18 +339,24 @@
                                         <h4>web developement</h4>
                                     </div>
                                     <div class="padding-8 box-tag w-fit">
-                                        <h4>html</h4>
+                                        <h4>Prisma</h4>
                                     </div>
                                     <div class="padding-8 box-tag w-fit">
-                                        <h4>css</h4>
+                                        <h4>Postgres</h4>
+                                    </div>
+                                    <div class="padding-8 box-tag w-fit">
+                                        <h4>Shadcn ui</h4>
+                                    </div>
+                                    <div class="padding-8 box-tag w-fit">
+                                        <h4>Better-Auth</h4>
                                     </div>
                                     
                                 </div>
-                                <a href="https://moveei.offerforyo.com/" target="_blank" class="learn-more">Landing page Moveei </a>
-                                <a href="https://moveei.offerforyo.com/marcenaria/moveei%20marcenaria?orcamento=5050" target="_blank" class="learn-more">Pagina de apresentação do orçamento </a>
+                                <a href="https://moveei.com.br/" target="_blank" class="learn-more">Landing page Moveei </a>
+                                <a href="https://moveei.com.br/marcenaria/moveei%20marcenaria?orcamento=5050" target="_blank" class="learn-more">Pagina de orçamento online</a>
                             </div>
                         </div>
-                        <!-- projeto 02 fim -->
+                        <!-- projeto 01 fim -->
 
                     </div>
                 </div>
